include/gpac/filters.h


typedef struct __gf_filter_pid GF_FilterPid;
typedef struct __gf_filter_pck GF_FilterPacket;
typedef struct __gf_prop_val GF_PropertyValue;
struct __gf_prop_val
{
	GF_PropType type;
	union {
		u64 longuint;
		s64 longsint;
		s32 sint;
		u32 uint;
		Bool boolean;
		GF_Fraction frac;
		GF_Fraction64 lfrac;
		Fixed fnumber;
		Double number;
		GF_PropVec2i vec2i;
		GF_PropVec2 vec2;
		GF_PropVec3i vec3i;
		GF_PropVec3 vec3;
		GF_PropVec4i vec4i;
		GF_PropVec4 vec4;
		GF_PropData data;
		char *string;
		void *ptr;
		GF_List *string_list;
		GF_PropUIntList uint_list;
		GF_PropIntList sint_list;
		GF_PropVec2iList v2i_list;
	} value;
};
const char *gf_props_4cc_get_name(u32 prop_4cc);
u32 gf_props_get_id(const char *name);
void gf_filter_pid_set_name(GF_FilterPid *PID, const char *name);
const char *gf_filter_pid_get_name(GF_FilterPid *PID);
const char *gf_filter_pid_get_filter_name(GF_FilterPid *PID);
void gf_filter_pid_set_max_buffer(GF_FilterPid *PID, u32 total_duration_us);
u32 gf_filter_pid_get_max_buffer(GF_FilterPid *PID);
GF_Err gf_filter_pid_negociate_property(GF_FilterPid *PID, u32 prop_4cc, const GF_PropertyValue *value);
GF_Err gf_filter_pid_negociate_property_dyn(GF_FilterPid *PID, char *name, const GF_PropertyValue *value);
const GF_PropertyValue *gf_filter_pid_caps_query(GF_FilterPid *PID, u32 prop_4cc);
const GF_PropertyValue *gf_filter_pid_caps_query_str(GF_FilterPid *PID, const char *prop_name);
u64 gf_filter_pid_query_buffer_duration(GF_FilterPid *PID, Bool check_pid_full);
void gf_filter_pid_set_eos(GF_FilterPid *PID);
Bool gf_filter_pid_has_seen_eos(GF_FilterPid *PID);
Bool gf_filter_pid_is_eos(GF_FilterPid *PID);
Bool gf_filter_pid_first_packet_is_empty(GF_FilterPid *PID);
Bool gf_filter_pid_get_first_packet_cts(GF_FilterPid *PID, u64 *cts);
u32 gf_filter_pid_get_packet_count(GF_FilterPid *PID);
Bool gf_filter_pid_would_block(GF_FilterPid *PID);
u32 gf_filter_pid_get_timescale(GF_FilterPid *PID);
GF_Err gf_filter_pid_resolve_file_template(GF_FilterPid *PID, char szTemplate[GF_MAX_PATH], char szFinalName[GF_MAX_PATH], u32 file_number, const char *file_suffix);
GF_Err gf_filter_pid_set_discard(GF_FilterPid *PID, Bool discard_on);
GF_Err gf_filter_pid_require_source_id(GF_FilterPid *PID);
void gf_filter_pid_recompute_dts(GF_FilterPid *PID, Bool do_recompute);
u32 gf_filter_pid_get_min_pck_duration(GF_FilterPid *PID);
Bool gf_filter_pid_is_playing(GF_FilterPid *PID);
GF_FilterPacket *gf_filter_pck_ref_ex(GF_FilterPacket *pck);
void gf_filter_pck_unref(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_readonly(GF_FilterPacket *pck);
GF_Err gf_filter_pck_send(GF_FilterPacket *pck);
void gf_filter_pck_discard(GF_FilterPacket *pck);
const u8 *gf_filter_pck_get_data(GF_FilterPacket *pck, u32 *size);
GF_Err gf_filter_pck_set_property(GF_FilterPacket *pck, u32 prop_4cc, const GF_PropertyValue *value);
GF_Err gf_filter_pck_set_property_str(GF_FilterPacket *pck, const char *name, const GF_PropertyValue *value);
GF_Err gf_filter_pck_merge_properties(GF_FilterPacket *pck_src, GF_FilterPacket *pck_dst);
const GF_PropertyValue *gf_filter_pck_get_property(GF_FilterPacket *pck, u32 prop_4cc);
const GF_PropertyValue *gf_filter_pck_get_property_str(GF_FilterPacket *pck, const char *prop_name);
const GF_PropertyValue *gf_filter_pck_enum_properties(GF_FilterPacket *pck, u32 *idx, u32 *prop_4cc, const char **prop_name);
GF_Err gf_filter_pck_set_framing(GF_FilterPacket *pck, Bool is_start, Bool is_end);
GF_Err gf_filter_pck_get_framing(GF_FilterPacket *pck, Bool *is_start, Bool *is_end);
GF_Err gf_filter_pck_set_dts(GF_FilterPacket *pck, u64 dts);
u64 gf_filter_pck_get_dts(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_cts(GF_FilterPacket *pck, u64 cts);
u64 gf_filter_pck_get_cts(GF_FilterPacket *pck);
u32 gf_filter_pck_get_timescale(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_duration(GF_FilterPacket *pck, u32 duration);
u32 gf_filter_pck_get_duration(GF_FilterPacket *pck);
GF_Err gf_filter_pck_truncate(GF_FilterPacket *pck, u32 size);
typedef enum
{
	GF_FILTER_SAP_NONE = 0,
	GF_FILTER_SAP_1,
	GF_FILTER_SAP_2,
	GF_FILTER_SAP_3,
	GF_FILTER_SAP_4,
	GF_FILTER_SAP_4_PROL
} GF_FilterSAPType;
GF_Err gf_filter_pck_set_sap(GF_FilterPacket *pck, GF_FilterSAPType sap_type);
GF_FilterSAPType gf_filter_pck_get_sap(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_interlaced(GF_FilterPacket *pck, u32 is_interlaced);
u32 gf_filter_pck_get_interlaced(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_corrupted(GF_FilterPacket *pck, Bool is_corrupted);
Bool gf_filter_pck_get_corrupted(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_seek_flag(GF_FilterPacket *pck, Bool is_seek);
Bool gf_filter_pck_get_seek_flag(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_byte_offset(GF_FilterPacket *pck, u64 byte_offset);
u64 gf_filter_pck_get_byte_offset(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_roll_info(GF_FilterPacket *pck, s16 roll_count);
s16 gf_filter_pck_get_roll_info(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_crypt_flags(GF_FilterPacket *pck, u8 crypt_flag);
u8 gf_filter_pck_get_crypt_flags(GF_FilterPacket *pck);
typedef enum
{
	GF_FILTER_CLOCK_NONE=0,
	GF_FILTER_CLOCK_PCR,
	GF_FILTER_CLOCK_PCR_DISC,
} GF_FilterClockType;
GF_Err gf_filter_pck_set_clock_type(GF_FilterPacket *pck, GF_FilterClockType ctype);
GF_FilterClockType gf_filter_pck_get_clock_type(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_carousel_version(GF_FilterPacket *pck, u8 version_number);
u8 gf_filter_pck_get_carousel_version(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_dependency_flags(GF_FilterPacket *pck, u8 dep_flags);
u8 gf_filter_pck_get_dependency_flags(GF_FilterPacket *pck);
GF_Err gf_filter_pck_set_seq_num(GF_FilterPacket *pck, u32 seq_num);
u32 gf_filter_pck_get_seq_num(GF_FilterPacket *pck);
typedef struct _gf_filter_frame_interface
{
	GF_Err (*get_plane)(struct _gf_filter_frame_interface *frame, u32 plane_idx, const u8 **outPlane, u32 *outStride);
	GF_Err (*get_gl_texture)(struct _gf_filter_frame_interface *frame, u32 plane_idx, u32 *gl_tex_format, u32 *gl_tex_id, GF_Matrix_unexposed * texcoordmatrix);
	u32 flags;
	void *user_data;
} GF_FilterFrameInterface;
GF_FilterFrameInterface *gf_filter_pck_get_frame_interface(GF_FilterPacket *pck);
Bool gf_filter_pck_is_blocking_ref(GF_FilterPacket *pck);