share/python/libgpac.py


    def set_clock_mode(self, do_discard):
        _libgpac.gf_filter_pid_set_discard(self._pid, do_discard)

    def require_source_id(self):
        return _libgpac.gf_filter_pid_require_source_id(self._pid)

    def set_clock_mode(self, do_compute):
        _libgpac.gf_filter_pid_recompute_dts(self._pid, do_compute)

    def query_cap(self, pcode):
        if self._input:
            raise Exception('Cannot query caps on input PID')
            return
        prop_4cc = pcode;
        prop_name = None;
        if isinstance(pcode, str):
            _pname = pcode.encode('utf-8')
            prop_4cc = _libgpac.gf_props_get_id(_pname)
            if prop_4cc==0:
                prop_name = _pname

        if prop_4cc:
            prop_val = _libgpac.gf_filter_pid_caps_query(self._pid, prop_4cc)
        else:
            prop_val = _libgpac.gf_filter_pid_caps_query_str(self._pid, _pname)

        if prop_val:
            return _prop_to_python(pname, prop.contents)
        return None

    def negociate_cap(self, pcode, prop):
        if self._input:
            raise Exception('Cannot negociate caps on input PID')
            return
        prop_4cc = pcode;
        prop_name = None;
        if isinstance(pcode, str):
            _pname = pcode.encode('utf-8')
            prop_4cc = _libgpac.gf_props_get_id(_pname)
            if prop_4cc==0:
                prop_name = _pname

        prop_val = _make_prop(prop_4cc, pcode, prop)
        if prop_4cc:
            _libgpac.gf_filter_pid_negociate_property(self._pid, prop_4cc, byref(prop_val))
        else:
            _libgpac.gf_filter_pid_negociate_property_dyn(self._pid, prop_name, byref(prop_val))

    def resolve_template(self, template, file_idx=0, suffix=None):
        res = create_string_buffer(2000)
        err = _libgpac.gf_filter_pid_resolve_file_template(self._pid, res, template.encode('utf-8'), file_idx, suffix);
        if err<0:
            raise Exception('Cannot resolve file template ' + template + ': ' + e2s(err))
        return res.raw.decode('utf-8')

    #fun:
    #new packets 


    @property
    def name(self):
        return _libgpac.gf_filter_pid_get_name(self._pid).decode('utf-8')

    @name.setter
    def name(self, val):
        _libgpac.gf_filter_pid_set_name(self._pid, val.encode('utf-8'))

    @property
    def filter_name(self):
        return _libgpac.gf_filter_pid_get_filter_name(self._pid).decode('utf-8')

    @property
    def eos(self):
        return _libgpac.gf_filter_pid_is_eos(self._pid)

    @eos.setter
    def eos(self):
        _libgpac.gf_filter_pid_set_eos(self._pid)

    @property
    def has_seen_eos(self):
        return _libgpac.gf_filter_pid_has_seen_eos(self._pid)

    @property
    def would_block(self):
        return _libgpac.gf_filter_pid_would_block(self._pid)

    @property
    def max_buffer(self):
        return _libgpac.gf_filter_pid_get_max_buffer(self._pid)

    @max_buffer.setter
    def max_buffer(self, value):
        return _libgpac.gf_filter_pid_set_max_buffer(self._pid, value)

    @property
    def buffer(self):
        return _libgpac.gf_filter_pid_query_buffer_duration(self._pid, False)

    @property
    def buffer_full(self):
        dur = _libgpac.gf_filter_pid_query_buffer_duration(self._pid, True)
        if dur:
            return True
        else:
            return False

    @property
    def first_empty(self):
        return _libgpac.gf_filter_pid_first_packet_is_empty(self._pid)

    @property
    def first_cts(self):
        cts = c_ulonglong(0)
        res = _libgpac.gf_filter_pid_get_first_packet_cts(self._pid, byref(cts))
        if not res:
            return None
        return cts.value

    @property
    def nb_pck_queued(self):
        return _libgpac.gf_filter_pid_get_packet_count(self._pid)

    @property
    def timescale(self):
        return _libgpac.gf_filter_pid_get_timescale(self._pid)

    @property
    def min_pck_dur(self):
        return _libgpac.gf_filter_pid_get_min_pck_duration(self._pid)

    @property
    def playing(self):
        return _libgpac.gf_filter_pid_is_playing(self._pid)

    #vars:
    #src_name, args, src_args, src_url, dst_url: probably not needed since the entire session is exposed to the custom filter




#
#        filter packet bindings
#

#getters
_libgpac.gf_filter_pck_get_dts.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_dts.restype = c_ulonglong
_libgpac.gf_filter_pck_set_dts.argtypes = [GF_FilterPacket, c_ulonglong]

_libgpac.gf_filter_pck_get_cts.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_cts.restype = c_ulonglong
_libgpac.gf_filter_pck_set_cts.argtypes = [GF_FilterPacket, c_ulonglong]

_libgpac.gf_filter_pck_get_sap.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_sap.restype = c_uint
_libgpac.gf_filter_pck_set_sap.argtypes = [GF_FilterPacket, c_uint]

_libgpac.gf_filter_pck_get_duration.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_duration.restype = c_uint
_libgpac.gf_filter_pck_set_duration.argtypes = [GF_FilterPacket, c_uint]

_libgpac.gf_filter_pck_get_data.argtypes = [GF_FilterPacket, POINTER(c_uint)]
_libgpac.gf_filter_pck_get_data.restype = POINTER(c_ubyte)

_libgpac.gf_filter_pck_get_framing.argtypes = [GF_FilterPacket, POINTER(c_bool), POINTER(c_bool)]
_libgpac.gf_filter_pck_set_framing.argtypes = [GF_FilterPacket, c_bool, c_bool]

_libgpac.gf_filter_pck_get_timescale.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_timescale.restype = c_uint

_libgpac.gf_filter_pck_get_interlaced.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_interlaced.restype = c_uint
_libgpac.gf_filter_pck_set_interlaced.argtypes = [GF_FilterPacket, c_uint]

_libgpac.gf_filter_pck_get_corrupted.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_corrupted.restype = c_bool
_libgpac.gf_filter_pck_set_corrupted.argtypes = [GF_FilterPacket, c_bool]

_libgpac.gf_filter_pck_get_seek_flag.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_seek_flag.restype = c_bool
_libgpac.gf_filter_pck_set_seek_flag.argtypes = [GF_FilterPacket, c_bool]

_libgpac.gf_filter_pck_get_byte_offset.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_byte_offset.restype = c_ulonglong
_libgpac.gf_filter_pck_set_byte_offset.argtypes = [GF_FilterPacket, c_ulonglong]

_libgpac.gf_filter_pck_get_roll_info.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_roll_info.restype = c_short
_libgpac.gf_filter_pck_set_roll_info.argtypes = [GF_FilterPacket, c_short]

_libgpac.gf_filter_pck_get_crypt_flags.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_crypt_flags.restype = c_uint
_libgpac.gf_filter_pck_set_crypt_flags.argtypes = [GF_FilterPacket, c_uint]

_libgpac.gf_filter_pck_get_clock_type.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_clock_type.restype = c_uint
_libgpac.gf_filter_pck_set_clock_type.argtypes = [GF_FilterPacket, c_uint]

_libgpac.gf_filter_pck_get_carousel_version.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_carousel_version.restype = c_uint
_libgpac.gf_filter_pck_set_carousel_version.argtypes = [GF_FilterPacket, c_uint]

_libgpac.gf_filter_pck_get_seq_num.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_seq_num.restype = c_uint
_libgpac.gf_filter_pck_set_seq_num.argtypes = [GF_FilterPacket, c_uint]

_libgpac.gf_filter_pck_get_dependency_flags.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_dependency_flags.restype = c_uint
_libgpac.gf_filter_pck_set_dependency_flags.argtypes = [GF_FilterPacket, c_uint]

_libgpac.gf_filter_pck_get_frame_interface.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_get_frame_interface.restype = c_void_p

_libgpac.gf_filter_pck_is_blocking_ref.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_is_blocking_ref.restype = c_bool

_libgpac.gf_filter_pck_enum_properties.argtypes = [GF_FilterPacket, POINTER(c_uint), POINTER(c_uint), POINTER(c_char_p)]
_libgpac.gf_filter_pck_enum_properties.restype = POINTER(GF_PropertyValue)

_libgpac.gf_filter_pck_get_property.argtypes = [GF_FilterPacket, c_uint]
_libgpac.gf_filter_pck_get_property.restype = POINTER(GF_PropertyValue)
_libgpac.gf_filter_pck_get_property_str.argtypes = [GF_FilterPacket, c_char_p]
_libgpac.gf_filter_pck_get_property_str.restype = POINTER(GF_PropertyValue)

_libgpac.gf_filter_pck_ref_ex.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_ref_ex.restype = GF_FilterPacket
_libgpac.gf_filter_pck_unref.argtypes = [GF_FilterPacket]

_libgpac.gf_filter_pck_discard.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_set_readonly.argtypes = [GF_FilterPacket]
_libgpac.gf_filter_pck_send.argtypes = [GF_FilterPacket]

_libgpac.gf_filter_pck_merge_properties.argtypes = [GF_FilterPacket, GF_FilterPacket]

_libgpac.gf_filter_pck_set_property.argtypes = [GF_FilterPacket, c_uint, POINTER(GF_PropertyValue)]
_libgpac.gf_filter_pck_set_property_str.argtypes = [GF_FilterPacket, c_char_p, POINTER(GF_PropertyValue)]
_libgpac.gf_filter_pck_truncate.argtypes = [GF_FilterPacket, c_uint]


class FilterPacket:
    def __init__(self, pck, is_src):
        self._pck = pck
        self._is_src = is_src

    def enum_props(self, callback_obj):
        if (hasattr(callback_obj, 'on_prop_enum')==False):
            return

        pidx=c_uint(0)
        while True:
            _p4cc=c_uint(0)
            _pname=c_char_p(0)
            prop = _libgpac.gf_filter_pck_enum_properties(self._pck, byref(pidx), byref(_p4cc), byref(_pname))
            if (prop):
                p4cc=_p4cc.value
                pname=None
                if _pname:
                    pname=_pname.value.decode('utf-8')
                else:
                    pname=_libgpac.gf_props_4cc_get_name(p4cc).decode('utf-8')
                pval = _prop_to_python(pname, prop.contents)
                callback_obj.on_prop_enum(pname, pval)
            else:
                break

    def get_prop(self, prop_name):
        _name = prop_name.encode('utf-8')
        p4cc = _libgpac.gf_props_get_id(_name)
        if p4cc:
            prop = _libgpac.gf_filter_pck_get_property(self._pck, p4cc)
        else:
            prop = _libgpac.gf_filter_pck_get_property_str(self._pck, _name)
        if prop:
            return _prop_to_python(prop_name, prop.contents)
        return None;

    def ref(self):
        self._pck = _libgpac.gf_filter_pck_ref_ex(self._pck)

    def unref(self):
        _libgpac.gf_filter_pck_unref(self._pck)


    def discard(self):
        if self._is_src:
            raise Exception('Cannot discard on source packet')
        _libgpac.gf_filter_pck_discard(self._pck)
        self._pck = None

    def readonly(self):
        if self._is_src:
            raise Exception('Cannot set readonly on source packet')
        _libgpac.gf_filter_pck_set_readonly(self.pck)

    def send(self):
        if self._is_src:
            raise Exception('Cannot send on source packet')
        _libgpac.gf_filter_pck_send(self.pck)

    def copy_props(self, ipck):
        if self._is_src:
            raise Exception('Cannot copy properties on source packet')
        if ipck==None:
            return
        err = _libgpac.gf_filter_pck_merge_properties(self._pid, ipck._pck)
        if err<0:
            raise Exception('Cannot copy properties: ' + e2s(err) )

    def set_prop(self, pcode, prop):
        if self._is_src:
            raise Exception('Cannot copy properties on source packet')
        prop_4cc = pcode;
        prop_name = None;
        if isinstance(pcode, str):
            _pname = pcode.encode('utf-8')
            prop_4cc = _libgpac.gf_props_get_id(_pname)
            if prop_4cc==0:
                prop_name = _pname

        if prop==None:
            if prop_4cc:
                _libgpac.gf_filter_pck_set_property(self._pck, prop_4cc, None)
            else:
                _libgpac.gf_filter_pck_set_property_str(self._pck, prop_name, None)
            return
